[tool.poetry]
name = "ghactions-test"
version = "0.1.0"
description = ""
authors = ["Antonio <tonivalle15@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
